# retail-sales-pipelines

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml  requirements.txt
airbyte/config/: connection.template.json  destination_motherduck.template.json  destination_snowflake.template.json
data/raw/customers/: customers_data.csv
data/raw/inventory/: inventory_data.csv
data/raw/products/: products_2026_03_31.csv
data/raw/sales/: sales_2026_03_31.csv
docs/: medallion_architecture.md  pipeline_runbook.md
sql/validation/: motherduck_validation.sql  snowflake_validation.sql
sql/warehouse/: motherduck_schema.sql  snowflake_schema.sql
src/retail_sales_pipeline/: __init__.py  cli.py  config.py  reporting.py  s3_manager.py  transformations.py
